--- a/client-demo/Dockerfile
+++ b/client-demo/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:8-jdk-alpine
 COPY build/libs/client-demo-0.0.1-SNAPSHOT.jar client-demo-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","/client-demo-0.0.1-SNAPSHOT.jar"]
+EXPOSE 8089
